--- a/build.gradle
+++ b/build.gradle
@@ -126,6 +126,8 @@ dependencies {
     implementation 'io.sentry:sentry-logback:5.5.3'
 
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
+    implementation 'com.sun.mail:javax.mail:1.6.2'
 
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
