--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,10 @@ spring.flyway.locations=classpath:/db/migration
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=hei.jaonary@gmail.com
+spring.mail.password=wflwlsaelwrzxkwg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
