--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ spring.jpa.open-in-view=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hei.jaonary@gmail.com
-spring.mail.password=wflwlsaelwrzxkwg
+spring.mail.username={gmail}
+spring.mail.password={password}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
